<resources>
    <string name="app_name">Favourite Books</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="art_of_human_hacking">Art of Human Hacking</string>
    <string name="_2010">2010</string>
    <string name="security">Security</string>
    <string name="book_image">Book Image</string>
    <string name="book_name">book_name</string>
    <string name="book_year">book_year</string>
    <string name="book_genre">book_genre</string>
    <string name="dummy_text">lorem ipsum dummy text description</string>
    <string name="price">Price:</string>
    <string name="_14_2_omr">14.2 OMR</string>
    <string name="sub_total">Sub Total</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="no_of_books">No Of Books</string>
</resources>